# lab

./: LICENSE  Orientacoes.txt  README.md  app.py  config.py  labct.sql  pyproject.toml  requirements.txt
api/: __init__.py  decorator.py  paginate.py
api/entidades/: cliente.py  estoque.py  filial_pdv.py  fornecedor.py  mix_produto.py  operacao.py  pedido.py  produtoMp.py  receita.py  usuario.py
api/models/: cliente_model.py  estoque_model.py  filial_pdv_model.py  fornecedor_model.py  mix_produto_model.py  operacao_model.py  pedido_model.py  produtoMp_model.py  receita_model.py  usuario_model.py
api/schemas/: cliente_schema.py  estoque_schema.py  filial_pdv_schema.py  fornecedor_schemas.py  login_schema.py  mix_produto_schema.py  operacao_schema.py  pedido_schemas.py  produtoMp_schema.py  receita_schema.py  usuario_schema.py
api/services/: cliente_service.py  estoque_service.py  filial_pdv_service.py  fornecedor_service.py  mix_produto_service.py  operacao_service.py  pedido_service.py  produtoMp_service.py  receita_service.py  usuario_service.py
api/templates/: atualizar_cliente.html  base.html  basedetalhes.html  compra.html  contato.html  error.html  index.html  listar.html  login.html  mix_produto.html  modal.html  producao.html  reestoque.html  register.html  sobre.html  sucesso.html
api/views/: cliente_views.py  cliente_views2708.py  cliente_views27082.py  estoque_views.py  filial_pdv_views.py  fornecedor_views.py  login_views.py  mix_produto_views.py  operacao_view.py  pedido_views.py  pedido_views2908.py  produtoMp_views.py  receita_views.py  (+3 more)
(+69 files in other folders)
