[tool.poetry]
name = "repl_nix_lab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
services = "^0.1.1"
Flask-Migrate = "^4.0.4"
schemas = "^0.7.1"
flask-marshmallow = "^0.15.0"
passlib = "^1.7.4"
Flask-SQLAlchemy = "^3.0.5"
Flask = "^2.3.3"
marshmallow = "^3.20.1"
marshmallow-enum = "^1.5.1"
views = "^0.3"
WTForms = "^3.0.1"
Flask-WTF = "^1.1.1"
Redberry = "^0.0.7"
reportlab = "^4.0.4"
Flask-JWT-Extended = "^4.5.2"
Flask-RESTful = "^0.3.10"
SQLAlchemy = "^2.0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
